# daily-operating-system

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  export_calendars.py  pyproject.toml
calendars/: friday.ics  friday_show.ics  saturday_no_show.ics  saturday_show.ics  sunday.ics  weekday.ics
scripts/: com.dayos.autoinit.plist  com.dayos.notify.plist  notify_schedule.py
src/dayctl/: __init__.py  __main__.py  cli.py  display.py  models.py  storage.py  themes.py  web_themes.py
tests/: conftest.py  test_cli.py  test_display.py  test_models.py  test_storage.py  test_themes.py
